--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -6,4 +6,4 @@
   <% end %>
 </ul>
 
-<%= link_to "Add a restaurant", new_restaurant_path %>
+<%= link_to "Add a restaurant", new_restaurant_path, class: "btn btn-primary" %>
