--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -12,8 +12,8 @@
 <% end %>
 </ul>
 
-<%= link_to "Add a review", new_restaurant_review_path(@restaurant) %>
+<%= link_to "Add a review", new_restaurant_review_path(@restaurant), class: "btn btn-info" %>
 
 <br>
 
-<%= link_to "Back", restaurants_path %>
+<%= link_to "Back", restaurants_path, class: "btn btn-primary" %>
